# dnsCache

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: cmake-single-platform.yml
dnsCache/: DnsCache.cpp  DnsCache.h
test/: dnsCacheTest.cpp
